<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.gob.cdmx.ssc.mpt.SettingsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?colorPrimary"
        android:title="@string/app_name"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="@string/app_name"
        />

    <ScrollView
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="26sp"
                    android:text="@string/title_infoScan"
                    android:textStyle="bold"
                    android:textColor="@color/md_black_1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="30dp"
                    android:textSize="16sp"
                    android:text="@string/lab_contentScan"
                    android:textStyle="bold"
                    android:textColor="@color/md_black_1000_75"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/result"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginTop="70dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnBack"
                        android:layout_weight="1"
                        android:textColor="@color/md_white_1000"
                        android:background="@color/md_red_500"
                        android:text="@string/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_weight="1"
                        android:background="@color/md_green_A400"
                        android:text="@string/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
